# personal-data-extraction

./: .cruft.json  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/actions/python-poetry-env/: action.yml
.github/workflows/: docs.yml  test.yml
notebooks/: README.md
notebooks/2-exploration/: eda.ipynb
tests/: test_mock.py
