[tool.poetry]
name = "pii_extract"
version = "0.1.0"
description = "Solution to Kaggle competition https://www.kaggle.com/competitions/pii-detection-removal-from-educational-data/data"
authors = [
    "WhirlwindLabs <none>",
]
readme = "README.md"
documentation = "https://3lueLightning.github.io/personal-data-extraction"
repository = "https://github.com/3lueLightning/personal-data-extraction"

[tool.poetry.dependencies]
python = "^3.10" # highest python version supported by tensorflow
hydra-core = "^1.1.1"
ipykernel = "^6.29.4"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
langdetect = "^1.0.9"
keras = "^3.1.1" # required by starter notebook
tensorflow = "^2.16.1" # required by starter notebook
tensorflow-metal = "^1.1.0" # required by starter notebook
keras-nlp = "^0.8.2" # required by starter notebook
jax = "^0.4.25"
jaxlib = "^0.4.25"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"

# Standardized Developer Workflow Orchestration
cruft = {extras = ["pyproject"], version = "^2.15.0"} # Automated Cookiecutter template synchronization

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"

#
[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.7"
mkdocstrings = {extras = ["python"], version = "^0.24.3"}
pymdown-extensions = "^10.7"
#

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.virtualenvs]
in-project = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.paths]
source = ["src"]
